--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 SimGrid (3.6) unstable; urgency=low
 
+ Java and Ruby: 
+ * Bindings now constitute their own package, separated from the main one.
+   Rational: reduce our maintainance nightmare by reducing the module coupling.
+   They will soon be released on their own on gforge. In the meanwhile:
+   svn co svn://scm.gforge.inria.fr/svn/simgrid/contrib/trunk/simgrid-java
+   svn co svn://scm.gforge.inria.fr/svn/simgrid/contrib/trunk/simgrid-ruby
+ 
+ GRAS: It is not considered as stable anymore, but experimental. Sorry.
+ * It's not quite deprecated for now because we have no replacement,
+   but it may soon become the case.
+
  MSG
  * New function MSG_comm_get_status(). MSG_comm_test() and MSG_comm_testany()
    only say if a communication is finished, no matter whether it succeeded or
