--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 
+                    _               _____ _____ 
+__   _____ _ __ ___(_) ___  _ __   |___ /|___  |
+\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   / / 
+ \ V /  __/ |  \__ \ | (_) | | | |  ___) | / /  
+  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_/   
+                                                
+
+(still to be done)
+
                     _               _____  __   
 __   _____ _ __ ___(_) ___  _ __   |___ / / /_  
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \| '_ \ 
