--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+SimGrid (3.7) unstable; urgency=low 
+
+ -- `LC_ALL=C date` Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
+
 SimGrid (3.6.1) unstable; urgency=low 
 
  The "Oops, we broke Macs too" release
