[Web] Update publication list.

--- a/website/all.bib
+++ b/website/all.bib
@@ -1,3 +1,27 @@
+
+@PhdThesis{pedro_phd,
+  author = 	 {Pedro Velho},
+  title = 	 {Accurate and Fast Simulations of Large- Scale Distributed Computing Systems},
+  school = 	 {University Joseph Fourier},
+  year = 	 {2011},
+  address = 	 {Grenoble},
+  month = 	 jun,
+  category = {core}
+}
+15
+	
+	
+@InProceedings { DLG_CCgrid_11,
+  author = {Donassolo, Bruno and Legrand, Arnaud and Geyer, Claudio},
+  title = {{N}on-{C}ooperative {S}cheduling {C}onsidered {H}armful in {C}ollaborative {V}olunteer {C}omputing {E}nvironments},
+  booktitle = {{P}roceedings of the 11th {IEEE} {I}nternational {S}ymposium on {C}luster {C}omputing and the {G}rid ({CCG}rid'11)},
+  year = {2011},
+  month = {may},
+  publisher = {IEEE Computer Society Press},
+  pdf = {http://mescal.imag.fr/membres/arnaud.legrand/articles/2011-ccgrid-donassolo.pdf},
+  category = {intra}
+}
+
 @InProceedings{ cb11:pdp2011,
   author = "Bogdan Florin Cornea and Julien Bourgeois",
   title = "Performance Prediction of Distributed Applications Using Block Benchmarking Methods",
