[Web] Update publications

--- a/website/all.bib
+++ b/website/all.bib
@@ -1,4 +1,3 @@
-
 @PhdThesis{pedro_phd,
   author = 	 {Pedro Velho},
   title = 	 {Accurate and Fast Simulations of Large- Scale Distributed Computing Systems},
@@ -8,8 +7,19 @@
   month = 	 jun,
   category = {core}
 }
-15
 	
+@PhdThesis{charrier_phd,
+   author = {Charrier, Ghislain},
+   title = {Scheduling and Dynamic Management of Applications over Grids},
+   school = {École Normale Supérieure de Lyon (ÉNS-Lyon), Laboratoire
+     de l'Informatique du Parallélisme (LIP)},
+   note = {Jury: Françoise Baude, Yves Caniou,  Michel Dayde,
+     Frédéric Desprez, Pierre Kuonen, Olivier Richard},
+   address = {Lyon, France},
+   month = {December},
+   year = {2010},
+   category = {extern}
+}
 	
 @InProceedings { DLG_CCgrid_11,
   author = {Donassolo, Bruno and Legrand, Arnaud and Geyer, Claudio},
