--- a/website/all.bib
+++ b/website/all.bib
@@ -1,3 +1,15 @@
+@InProceedings { Schnorr:2011:MAL:1996029.1996037,
+  author = {Schnorr, Lucas Mello and Legrand, Arnaud and Vincent, Jean-Marc},
+  title = {{M}ulti-scale analysis of large distributed computing systems},
+  booktitle = {{P}roceedings of the third international workshop on {L}arge-scale system and application performance},
+  pages = {27--34},
+  year = {2011},
+  series = {LSAP '11},
+  publisher = {ACM},
+  pdf = {http://mescal.imag.fr/membres/arnaud.legrand/articles/2011-lsap-schnorr.pdf},
+  category = {intra}
+}
+
 @PhdThesis{pedro_phd,
   author = 	 {Pedro Velho},
   title = 	 {Accurate and Fast Simulations of Large- Scale Distributed Computing Systems},
