Some changes in the website look before 3.6.2 arrives.

--- a/website/all.bib
+++ b/website/all.bib
@@ -10,6 +10,29 @@
   category = {intra}
 }
 
+@InProceedings{forte2011,
+  author = {{R}osa, {C}ristian and {M}erz, {S}tephan and {Q}uinson, {M}artin},
+  title = {{S}imGrid {MC}: {V}erification {S}upport for a {M}ulti-API {S}imulation {P}latform},
+  booktitle = {31th Formal Techniques for Networked and Distributed Systems -- FORTE 2011},
+  pages = {274-288},
+  month = {June},
+  year = {2011},
+  address = {Reykjavik, Iceland},
+  category = {core}    
+}
+
+@InProceedings{avocs,
+  author = {{R}osa, {C}ristian and {M}erz, {S}tephan and {Q}uinson, {M}artin},
+  title = {{A} {S}imple {M}odel of {C}ommunication {APIs} -- {A}pplication to {D}ynamic {P}artial-order {R}eduction},
+  booktitle = {10th International Workshop on Automated Verification of Critical Systems -- AVOCS 2010},
+  pages = {137-151},
+  year = 2010,
+  address = {Dusseldorf, Germany},
+  month = {September},
+  category = {core}
+}
+
+
 @PhdThesis{pedro_phd,
   author = 	 {Pedro Velho},
   title = 	 {Accurate and Fast Simulations of Large- Scale Distributed Computing Systems},
