Minor bug fixes in the website (broken links + one ref more for publi section)

--- a/website/all.bib
+++ b/website/all.bib
@@ -162,7 +162,19 @@ month = Aug,
 pages = {273-282},
 category = {extern}
 }
-
+@article{10.1109/ISPDC.2008.56,
+author = {Laurent Bobelin and Traian Muntean},
+title = {Algorithms for Network Topology Discovery using End-to-End Measurements},
+journal ={Parallel and Distributed Computing, International Symposium on},
+volume = {0},
+isbn = {978-0-7695-3472-5},
+year = {2008},
+pages = {267-274},
+doi = {http://doi.ieeecomputersociety.org/10.1109/ISPDC.2008.56},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+category = {intra}
+}
 @INPROCEEDINGS{Boutamine06*2,
 AUTHOR = "Boutammine, Salah-Salim and Millot, Daniel and Parrot,
                   Christian",
