--- a/website/all.bib
+++ b/website/all.bib
@@ -1,3 +1,14 @@
+@inproceedings{clauss:2011:inria-00527150:1,
+  AUTHOR = {Clauss, Pierre-Nicolas and Stillwell, Mark and Genaud, St{\'e}phane and Suter, Fr{\'e}d{\'e}ric and Casanova, Henri and Quinson, Martin},
+  TITLE = {{Single Node On-Line Simulation of MPI Applications with SMPI}},
+  BOOKTITLE = {{International Parallel \& Distributed Processing Symposium}},
+  ORGANIZATION = {IEEE},
+  YEAR = {2011},
+  MONTH = May,
+  ADDRESS = {Anchorange (AK), United States},
+  URL = {http://hal.inria.fr/inria-00527150},
+}
+
 @InProceedings { Schnorr:2011:MAL:1996029.1996037,
   author = {Schnorr, Lucas Mello and Legrand, Arnaud and Vincent, Jean-Marc},
   title = {{M}ulti-scale analysis of large distributed computing systems},
