--- a/website/all.bib
+++ b/website/all.bib
@@ -7,6 +7,7 @@
   MONTH = May,
   ADDRESS = {Anchorange (AK), United States},
   URL = {http://hal.inria.fr/inria-00527150},
+  category = {core}    
 }
 
 @InProceedings { Schnorr:2011:MAL:1996029.1996037,
