just added 1 entry in the bib file

--- a/website/all.bib
+++ b/website/all.bib
@@ -103,7 +103,18 @@
   YEAR=2010,
   category = {intra}
 }
-
+@inproceedings{DBLP:conf/3pgcic/QuinsonBS10,
+  author    = {Martin Quinson and
+               Laurent Bobelin and
+               Fr{\'e}d{\'e}ric Suter},
+  title     = {Synthesizing Generic Experimental Environments for Simulation},
+  booktitle = {3PGCIC},
+  year      = {2010},
+  pages     = {222-229},
+  ee        = {http://dx.doi.org/10.1109/3PGCIC.2010.37},
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+  category = {intra}
+}
 @InProceedings{c7,
   Address = {Perth, Australia},
   Author = {Caniou, Yves and Charrier, Ghislain and Desprez, Fr\'ed\'eric},
