Update version of SimGrid to 3.7.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+SimGrid (3.7.0) unstable; urgency=low 
+
+(still to be done)
+
 SimGrid (3.6.2) stable; urgency=low 
 
  The "Not coding new stuff allows to polish old things" release.
