--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
-
-
+     _____ _ __ ___(_) ___  _ __   |___ /|___  |
+\ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   / / 
+ \ V /  __/ |  \__ \ | (_) | | | |  ___) | / /  
+  \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_/   
+                                                
+ (still to be done)
                     _               _____  __    ____  
 __   _____ _ __ ___(_) ___  _ __   |___ / / /_  |___ \ 
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \| '_ \   __) | 
